Lab11 - Bus Mall
Added object instantiations for other pictures (forgot to expand my
selection of test images last night).

HTML tweaks.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="CSS/style.css">
   </head>
   <body>
-    <section id="product-images"></section>
+    <header></header>
+    <main>
+      <section id="product-images"></section>
+    </main>
+    <footer></footer>
   </body>
 <script src="JS/app.js"></script>
 </html>
