Lab 12 - Add a Chart
Added a chart using Chart.js that displays the number of votes and
views for each product after a round of votes.

Also modified the behavior so that the images rendered do not include
any from the previous round.

Modified to better handle displaying an arbitrary number of images
per round.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <header></header>
     <main>
       <section id="product-images"></section>
+      <canvas id="bus-mall-results"></canvas>
     </main>
     <footer></footer>
   </body>
-<script src="JS/app.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.bundle.min.js"></script>
+  <script src="JS/app.js"></script>
+  <script src="JS/charts.js"></script>
 </html>
