--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/style.css">
   </head>
   <body>
     <header></header>
     <main>
+      <h1>Welcome to the Bus Mall Marketing Data App</h1>
+      <section id="description">For each of the three products shown, please select the one you'd be the most interested in purchasing. There will be <span id="rounds-voting"></span> rounds of voting. Reload for another series of rounds.</section>
       <section id="product-images"></section>
       <canvas id="bus-mall-results"></canvas>
     </main>
